--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ aria-expanded="false" aria-label="Toggle navigation">
   	}
 
   	.testing {
-  		
+
   	}
   </style>
     	<div class="row">
@@ -172,12 +172,12 @@ aria-expanded="true" aria-controls="collapseOne1">
 				       	  <li> Caranya Gampang Banget! Peserta kompetisi sekolah pintar cukup mengunggah foto atau video ke platform Instagram dengan tema “Belajar Online Asyik, Di Rumah Aja bersama program prakerja” </li><br>
 				       	  <li> Gunakan caption paling menarik dan unik versi kamu. Yang paling Unik dan Menarik akan menjadi pertimbangan TIM.</li><br>
 				       	  <li> Jangan lupa gunakan hastag :#Prakerja #KartuPrakerja #kursussekolahpintar #kompetisisekolahpintar dan follow serta tag ke akun instagram  <a href="https://www.instagram.com/sekolahpintarcom/" target="_blank">@sekolahpintarcom.</a></li><br>
-				       	  <li> 4.	Peserta kompetisi sekolah pintar wajib membuka akun instagram dengan mode publik bukan private. </li><br>
+				       	  <li> Peserta kompetisi sekolah pintar wajib membuka akun instagram dengan mode publik bukan private. </li><br>
 
   <!-- <li> Jangan lupa gunakan hastag :#kursusbabastudio #kompetisibabastudio dan follow serta  -->
 <!-- tag ke akun instagram <a href="https://www.instagram.com/sekolahpintarcom/" target="_blank">@sekolahpintarcom.</a></li><br> -->
 
-<li> 5.	Jangan lupa juga TAG akun instagram <a href="https://www.instagram.com/sekolahpintarcom/" target="_blank">@sekolahpintarcom.</a> dan<a href="https://www.instagram.com/prakerja.go.id/" target="_blank"> @prakerja.go.id</a></li><br>
+<li> Jangan lupa juga TAG akun instagram <a href="https://www.instagram.com/sekolahpintarcom/" target="_blank">@sekolahpintarcom.</a> dan<a href="https://www.instagram.com/prakerja.go.id/" target="_blank"> @prakerja.go.id</a></li><br>
 
 <div class="alert alert-danger" role="alert">
   <h4 class="alert-heading">JANGAN SAMPAI LUPA...!!!!</h4>
@@ -187,9 +187,9 @@ aria-expanded="true" aria-controls="collapseOne1">
 </div>
 				       	  <li> Pemenang ditentukan menggunakan sistem penjurian oleh TIM Sekolah Pintar untuk menilai foto, video serta caption paling menarik dan memenuhi persyaratan yang ditentukan. Keputusan juri adalah final dan tidak dapat diganggu gugat</li><br>
 				       	   <li> Masing - masing Pemenang terpilih akan mendapatkan hadiah berupa:
-				       	   		<ul>
+				       	   		<ol>
 				       	   			<li> 3 Unit Handphone Redmi Note 8 Untuk 3 pemenang</li>
-				       	   		</ul>
+				       	   		</ol>
 				       	   </li><br>
 				       	   <li> Sekolahpintar berhak untuk membatalkan, menunda, dan melakukan perubahan apapun atas 
 program ini dalam hal terjadinya keadaan di luar kendali atau force majeur</li><br>
@@ -227,12 +227,13 @@ menyetujui semua syarat dan ketentuan yang berlaku</li><br>
 		    	<li> Pemenang yang terpilih karena satu dan lain hal akan diumumkan paling lambat setiap akhir bulan, berdasarkan video atau foto serta caption paling menarik yang bisa menuangkan manfaat dari mengikuti prakerja dengan pembelajaran jarak jauh (online), berdasarkan pelatihan-pelatihan yang kamu dapatkan di Sekolahpintar. Penentuan juga berdasarkan keputusan TIM mutlak dan tidak dapat diganggu gugat.</li><br>
 		    	<li> Pemenang yang terpilih akan dihubungi langsung oleh Tim Sekolah Pintar. </li><br>
 		    	<li> Pemenang wajib mengirimkan screenshoot seperti :
-  					<ul>
+  					<ol type="A">
   						<li>Screenshoot invoice untuk pembelian kursus di kartuprakerja.sekolahpintar.com</li>
   						<li>Screenshoot sisa saldo (dari dashboard prakerja kamu).</li>
   						<li>Screenshoot sertifikat penyelesaian semua rangkaian kursus di 
 kartuprakerja.sekolahpintar.com.</li>
-  					</ul>
+						<li>Screenshoots Testimoni Kamu Di Dashboard Prakerja</li>
+  					</ol>
 		    	</li><br>
 		    		    	<li> Pengiriman hadiah kepada pemenang terpilih akan diproses setelah dokumen yang dibutuhkan sudah lengkap, paling lambat sebulan setelah pengumuman pemenang setiap minggunya</li><br>
 
