--- a/index-new.html
+++ b/index-new.html
@@ -262,10 +262,12 @@ menyetujui semua syarat dan ketentuan yang berlaku</li><br>
 		    	<li> Pemenang yang terpilih akan dihubungi langsung oleh Tim Sekolah Pintar. </li><br>
 		    	<li> Pemenang wajib mengirimkan screenshoot seperti :
   					<ol type="A">
-  						<li>Screenshoot invoice untuk pembelian kursus di kartuprakerja.sekolahpintar.com</li>
-  						<li>Screenshoot sisa saldo (dari dashboard prakerja kamu).</li>
-  						<li>Screenshoot sertifikat penyelesaian semua rangkaian kursus di 
-kartuprakerja.sekolahpintar.com.</li>
+  						 <li>Screenshoot invoice untuk pembelian kursus pertama</li>
+						<li>Screenshoot invoice untuk pembelian kursus kedua di kartuprakerja.sekolahpintar.com</li>
+						<li>Sertifikat kelulusan pertama.</li>
+						<li>Sertifikat kelulusan kedua</li>
+						<li>Screenshoot Ulasan dan rating pertama di kemenaker (jika membeli di kemenaker)</li>
+						<li>Screenshoot Ulasan dan rating kelulusan ke dua di kemenaker</li>
 						<li>Screenshoots Testimoni Kamu Di Dashboard Prakerja</li>
   					</ol>
 		    	</li><br>
