--- a/index-new.html
+++ b/index-new.html
@@ -199,8 +199,8 @@ aria-expanded="true" aria-controls="collapseOne1">
 				       	 <li> Caranya Gampang Banget! Peserta kompetisi TECHFOR ID cukup :
 
 				       	  		<ol type="A">
-				       	  				<li>Mengunggah foto atau video ke platform Instagram dengan tema <b>“Cerita Kartu Prakerja, Belajar Online Asyik”</b>, Di Rumah Aja bersama program prakerja</li>
-				       	  				<li>Wajib mengunggah bukti screenshoot sudah penilaian di Dashboard sPrakerja di slide kedua.</li>		
+				       	  				<li>Mengunggah foto atau video ke platform Instagram dengan tema <b>“Cerita Kartu Prakerja, Belajar Online Asyik”</b>, bersama program prakerja</li>
+				       	  				<li>Wajib mengunggah bukti screenshoot sudah penilaian di Dashboard Prakerja di slide kedua.</li>		
 				       	  		</ol>
 				       	  </li><br>
 				       	  <li> Gunakan caption paling menarik dan unik versi kamu. Yang paling Unik dan Menarik akan menjadi pertimbangan TIM.</li><br>
