--- a/index-new.html
+++ b/index-new.html
@@ -196,7 +196,7 @@ aria-expanded="true" aria-controls="collapseOne1">
 				    <div id="collapseOne1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
 				      <div class="card-body">
 				       <ol>
-				       	 <li> Caranya Gampang Banget! Peserta kompetisi TECHFOR ID cukup :
+				       	 <li> Caranya Gampang Banget! Peserta kompetisi Sekolah Pintar cukup :
 
 				       	  		<ol type="A">
 				       	  				<li>Mengunggah foto atau video ke platform Instagram dengan tema <b>“Cerita Kartu Prakerja, Belajar Online Asyik”</b>, bersama program prakerja</li>
